Somehow icon size can be -1 in this case return null pixmap.

BUG: 160805


svn path=/trunk/KDE/kdelibs/; revision=797415